5.Argocd/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`argocd.narith.site`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-transport@kubernetescrd

  tls:
    secretName: argocd-tls
